--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -784,7 +784,7 @@ a {
       a {
         background-color: #f78b1f;
         border-radius: 3px;
-        color: #fff;
+        color: #000;
         text-align: center;
         padding: 3px 20px;
         float: left;
