--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1235,7 +1235,7 @@ a {
 
 /* PARAGRAPHS */
 .paragraphs-item-2-kolommen-tekst-afbeelding-link {
-  border-bottom: 1px solid $orange;
+  //border-bottom: 1px solid $orange;
   margin-bottom:20px;
   font-size:15px;
 }
@@ -1243,7 +1243,7 @@ a {
 .paragraphs-item-3-kolommen-video-s {
   float: left;
   width: 100%;
-  border-bottom: 1px solid $orange;
+  //border-bottom: 1px solid $orange;
   margin-bottom:20px;
   padding-bottom:20px;
   .field-name-field-2titel {
@@ -1269,7 +1269,6 @@ a {
 .paragraphs-item-2-kolommen-tekst-30-afbeelding-7 {
   float: left;
   width: 100%;
-  border-bottom: 1px solid $orange;
   font-size:15px;
   margin-bottom:20px;
   padding-bottom:20px;
@@ -1286,7 +1285,6 @@ a {
 .paragraphs-item-2-kolommen-tekst-video {
   float: left;
   width: 100%;
-  border-bottom: 1px solid $orange;
   font-size:15px;
   margin-bottom:20px;
   padding-bottom:20px;
