--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -601,6 +601,15 @@ a {
   color: #fff;
   font-weight: 100; }
 
+input[type="submit"] {
+  float: right;
+  margin-right: 10%;
+  background-color: orange;
+  padding: 9px 11px;
+  border-radius: 0;
+  color: #fff;
+  font-weight: 100; }
+
 .context-contact input[type="submit"] {
   margin-right: 10%;
   background-color: orange;
