--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -610,6 +610,16 @@ a {
   }
 }
 
+input[type="submit"] {
+  float: right;
+  margin-right: 10%;
+  background-color: orange;
+  padding: 9px 11px;
+  border-radius: 0;
+  color: #fff;
+  font-weight: 100;
+}
+
 .context-contact {
   input[type="submit"] {
     margin-right: 10%;
