--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -413,7 +413,7 @@ a {
 }
 
 /* Zinema */
-#block-views-exp-zinema-page {
+#block-views-exp-zinema-page, .block-views-exp-news-page-1 {
   .views-widget-filter-field_catogorie_tid {
     width:100%;
     label[for=edit-field-catogorie-tid] {
