--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -459,6 +459,15 @@ a {
   }
 }
 
+.context-nieuws {
+  .group-left {
+    width:36%;
+    img {
+      float:left;
+    }
+  }
+}
+
 .view-zinema {
   .views-row {
     margin-bottom:40px;
