--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -508,7 +508,7 @@ a {
       font-weight: 100; }
 
 .context-nieuws .group-left {
-  width: 36%; }
+  width: 36% !important; }
   .context-nieuws .group-left img {
     float: left; }
 
