--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -466,6 +466,11 @@ a {
       float:left;
     }
   }
+  .view-header {
+    color:$orange;
+    font-size:32px;
+    font-weight:700;
+  }
 }
 
 .view-zinema {
