--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1150,4 +1150,17 @@ input[type="submit"] {
         width: 373px;
         height: 300px; }
 
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  float: left;
+  width: 100%;
+  font-size: 15px;
+  margin-bottom: 20px;
+  padding-bottom: 20px; }
+  .paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item {
+    width: 33.3%;
+    float: left; }
+    .paragraphs-item-3-kolommen-tekst-video-tekst .field-name-field-video .field-items .field-item iframe {
+      width: 300px;
+      height: 200px; }
+
 /*# sourceMappingURL=global.css.map */
