--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1365,3 +1365,24 @@ input[type="submit"] {
     }
   }
 }
+
+.paragraphs-item-3-kolommen-tekst-video-tekst {
+  float: left;
+  width: 100%;
+  font-size:15px;
+  margin-bottom:20px;
+  padding-bottom:20px;
+  .field-name-field-video {
+    .field-items {
+      .field-item {
+        width:33.3%;
+        float:left;
+        iframe {
+          width:300px;
+          height:200px;
+
+        }
+      }
+    }
+  }
+}
