--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1163,4 +1163,8 @@ input[type="submit"] {
       width: 300px;
       height: 200px; }
 
+a.blue {
+  background-color: #3989c9;
+  padding: 10px; }
+
 /*# sourceMappingURL=global.css.map */
