--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1165,6 +1165,7 @@ input[type="submit"] {
 
 a.blue {
   background-color: #3989c9;
-  padding: 10px; }
+  padding: 10px;
+  color: #fff; }
 
 /*# sourceMappingURL=global.css.map */
