--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1168,4 +1168,14 @@ a.blue {
   padding: 10px;
   color: #fff; }
 
+.field-name-field-tekst-3-kolommen {
+  float: left;
+  width: 100%;
+  font-size: 15px;
+  margin-bottom: 20px;
+  padding-bottom: 20px; }
+  .field-name-field-tekst-3-kolommen .field-items .field-item {
+    width: 33.3%;
+    float: left; }
+
 /*# sourceMappingURL=global.css.map */
