--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1401,8 +1401,10 @@ a.blue {
   padding-bottom:20px;
   .field-items {
     .field-item {
-      width:33.3%;
-      float:left;
+      width: 33.3%;
+      float: left;
+      box-sizing: border-box;
+      padding-right: 25px;
     }
   }
 }
