--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1168,6 +1168,13 @@ a.blue {
   padding: 10px;
   color: #fff; }
 
+.entity-paragraphs-item .field-name-field-2titel {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-size: 2em;
+  margin-top: 20px; }
+
 .field-name-field-tekst-3-kolommen {
   float: left;
   width: 100%;
