--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1393,6 +1393,15 @@ a.blue {
   color:#fff;
 }
 
+
+.entity-paragraphs-item .field-name-field-2titel {
+  font-weight: 700;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+  font-size: 2em;
+  margin-top: 20px;
+}
+
 .field-name-field-tekst-3-kolommen {
   float: left;
   width: 100%;
