--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -18,3 +18,17 @@
     background-size: 51px;
   }
 }
+
+.front, .context-filmrecruitzz {
+  .field-name-field-quotes {
+    position: absolute;
+    width: 300px;
+    font-size: 2.813em;
+    color: #fff;
+    top: 9%;
+    padding-left:20%;
+    text-shadow: 1px 1px 1px #050505;
+    font-weight:700;
+    line-height:1.1;
+  }
+}
