--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -10,4 +10,15 @@
   height: 51px;
   background-size: 51px; }
 
+.front .field-name-field-quotes, .context-filmrecruitzz .field-name-field-quotes {
+  position: absolute;
+  width: 300px;
+  font-size: 2.813em;
+  color: #fff;
+  top: 9%;
+  padding-left: 20%;
+  text-shadow: 1px 1px 1px #050505;
+  font-weight: 700;
+  line-height: 1.1; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
