--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -966,7 +966,7 @@ input[type="submit"] {
 
 .block-search {
   width:50%;
-  float:left;
+  float:right;
   #search-block-form {
     width:87%;
   }
@@ -1160,8 +1160,8 @@ input[type="submit"] {
 
 .region-user-first {
   .block-block-2 {
-    width:50%;
-    float:left;
+    width:16%;
+    float:right;
     a {
       font-size:1px;
       color:transparent;
