--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -860,7 +860,7 @@ input[type="submit"] {
 
 .block-search {
   width: 50%;
-  float: left; }
+  float: right; }
   .block-search #search-block-form {
     width: 87%; }
 
@@ -1013,8 +1013,8 @@ input[type="submit"] {
   float: left; }
 
 .region-user-first .block-block-2 {
-  width: 50%;
-  float: left; }
+  width: 16%;
+  float: right; }
   .region-user-first .block-block-2 a {
     font-size: 1px;
     color: transparent; }
