--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -687,6 +687,7 @@ input[type="submit"] {
     background-color:$orange;
     width:100%;
     border:none;
+    padding-bottom:10px;
   }
 }
 
@@ -1162,6 +1163,7 @@ input[type="submit"] {
   .block-block-2 {
     width:16%;
     float:right;
+    margin-top:3px;
     a {
       font-size:1px;
       color:transparent;
