--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -659,7 +659,8 @@ input[type="submit"] {
   #search-block-form input[type="text"] {
     background-color: #f78b1f;
     width: 100%;
-    border: none; }
+    border: none;
+    padding-bottom: 10px; }
 
 .branding-data {
   width: 50%;
@@ -1014,10 +1015,10 @@ input[type="submit"] {
 
 .region-user-first .block-block-2 {
   width: 16%;
-  float: right; }
-  .region-user-first .block-block-2 a {
-    font-size: 1px;
-    color: transparent; }
+  float: right;
+  margin-top: 3 a;
+    margin-top-font-size: 1px;
+    margin-top-color: transparent; }
   .region-user-first .block-block-2 a.mail:after {
     content: "";
     background-image: url("img/mail.png");
