--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -56,6 +56,9 @@ a {
         border-right:2px solid $orange;
         margin:8px 0;
       }
+      a.first {
+        padding:0 20px 0 0;
+      }
       a:hover {
         color:$orange;
       }
