--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -56,7 +56,7 @@ a {
         border-right:2px solid $orange;
         margin:8px 0;
       }
-      a.first {
+      li.first a {
         padding:0 20px 0 0;
       }
       a:hover {
