--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -72,12 +72,12 @@
 }
 
 .block-news-frontpage-block {
-  display:inline-block;
-  width:50%;
+  display: inline-block;
+  width: 48%;
   position: absolute;
-  right: 0;
-  top: 5%;
-  float:left;
+  right: 0px;
+  top: 11%;
+  float: right;
   .views-row {
     margin-bottom:6px;
     width:85%;
