--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -76,11 +76,11 @@
 
 .block-news-frontpage-block {
   display: inline-block;
-  width: 50%;
+  width: 48%;
   position: absolute;
-  right: 0;
-  top: 5%;
-  float: left; }
+  right: 0px;
+  top: 11%;
+  float: right; }
   .block-news-frontpage-block .views-row {
     margin-bottom: 6px;
     width: 85%;
