--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -47,4 +47,9 @@
     text-align: center;
     height: 150px; }
 
+.region-user-first .block-block-2 {
+  width: 20%;
+  float: right;
+  margin-top: 3px; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
