--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -21,4 +21,9 @@
   font-weight: 700;
   line-height: 1.1; }
 
+.region-user-first .block-block-2 {
+  width: 16%;
+  float: right;
+  margin-top: 3px; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
