--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -32,3 +32,11 @@
     line-height:1.1;
   }
 }
+
+.region-user-first {
+  .block-block-2 {
+    width:16%;
+    float:right;
+    margin-top:3px;
+  }
+}
