--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -255,3 +255,12 @@
   }
 }
 
+#block-views-sponsoren-block {
+  .views-slideshow-controls-text-previous {
+    top: 14%;
+  }
+  .views-slideshow-controls-text-next {
+    top:14%;
+  }
+}
+
