--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -205,4 +205,7 @@
 #block-views-sponsoren-block .views-slideshow-controls-text-next {
   top: 14%; }
 
+.region-footer-first .block-menu li {
+  width: 20%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
