--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -195,6 +195,7 @@
   margin-top: 3px; }
 
 .block-search {
+  display: inline;
   width: 50%;
   float: right; }
   .block-search #search-block-form {
