--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1192,8 +1192,8 @@ input[type="submit"] {
 .context-filmrecruitzz, .context-filmrecruitz {
   .region-user-first {
     .block-block-2 {
-      width:50%;
-      float:left;
+      width:16%;
+      float:right;
       a {
         font-size:1px;
         color:transparent;
