--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1038,8 +1038,8 @@ input[type="submit"] {
     margin-top: 18px; }
 
 .context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
-  width: 50%;
-  float: left; }
+  width: 16%;
+  float: right; }
   .context-filmrecruitzz .region-user-first .block-block-2 a, .context-filmrecruitz .region-user-first .block-block-2 a {
     font-size: 1px;
     color: transparent; }
