--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -52,4 +52,7 @@
   float: right;
   margin-top: 3px; }
 
+.context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
+  width: 20%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
