--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -26,4 +26,7 @@
   float: right;
   margin-top: 3px; }
 
+.context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
+  width: 16%; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
