--- a/sites/all/themes/default/css/default-alpha-default-wide.scss
+++ b/sites/all/themes/default/css/default-alpha-default-wide.scss
@@ -40,3 +40,11 @@
     margin-top:3px;
   }
 }
+
+.context-filmrecruitzz, .context-filmrecruitz {
+  .region-user-first {
+    .block-block-2 {
+      width:16%;
+    }
+  }
+}
