--- a/sites/all/themes/default/css/default-alpha-default-normal.css
+++ b/sites/all/themes/default/css/default-alpha-default-normal.css
@@ -55,4 +55,7 @@
 .context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
   width: 20%; }
 
+.block-filmrecruitz-block .views-row {
+  width: 73%; }
+
 /*# sourceMappingURL=default-alpha-default-normal.css.map */
