--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -29,4 +29,7 @@
 .context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
   width: 16%; }
 
+.block-filmrecruitz-block .views-row {
+  width: 59%; }
+
 /*# sourceMappingURL=default-alpha-default-wide.css.map */
