--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -208,4 +208,10 @@
 .region-footer-first .block-menu li {
   width: 20%; }
 
+.context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
+  width: 27%; }
+
+.block-filmrecruitz-block .views-row {
+  width: 74%; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
