--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -272,3 +272,16 @@
   }
 }
 
+.context-filmrecruitzz, .context-filmrecruitz {
+  .region-user-first {
+    .block-block-2 {
+      width:27%;
+    }
+  }
+}
+
+.block-filmrecruitz-block {
+  .views-row {
+    width: 74%;
+  }
+}
