--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -281,7 +281,36 @@
 }
 
 .block-filmrecruitz-block {
+  display: inline-block;
+  width: 50%;
+  position: absolute;
+  right: 0;
+  top: 10%;
+  float: left;
+  z-index: 997;
   .views-row {
+    position:relative;
+    margin-bottom: 8px;
     width: 74%;
+    padding: 12px;
+    background-color: rgba(70, 136, 200, 0.7);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+    a:after {
+      content: "";
+      background: url("img/arrow.jpg");
+      background-repeat: no-repeat;
+      background-size: 48px;
+      height: 51px;
+      width: 45px;
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    a {
+      color:#fff;
+      font-size:18px;
+      text-transform:uppercase;
+    }
   }
 }
