--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -211,7 +211,35 @@
 .context-filmrecruitzz .region-user-first .block-block-2, .context-filmrecruitz .region-user-first .block-block-2 {
   width: 27%; }
 
-.block-filmrecruitz-block .views-row {
-  width: 74%; }
+.block-filmrecruitz-block {
+  display: inline-block;
+  width: 50%;
+  position: absolute;
+  right: 0;
+  top: 10%;
+  float: left;
+  z-index: 997; }
+  .block-filmrecruitz-block .views-row {
+    position: relative;
+    margin-bottom: 8px;
+    width: 74%;
+    padding: 12px;
+    background-color: rgba(70, 136, 200, 0.7);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)"; }
+    .block-filmrecruitz-block .views-row a:after {
+      content: "";
+      background: url("img/arrow.jpg");
+      background-repeat: no-repeat;
+      background-size: 48px;
+      height: 51px;
+      width: 45px;
+      position: absolute;
+      right: 0;
+      top: 0; }
+    .block-filmrecruitz-block .views-row a {
+      color: #fff;
+      font-size: 18px;
+      text-transform: uppercase; }
 
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
