--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -314,3 +314,13 @@
     }
   }
 }
+
+.field-name-field-content {
+  .field-item {
+    width: 33.3%;
+    float: left;
+    color: #fff;
+    box-sizing: border-box;
+    padding-right: 4%;
+  }
+}
