--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -324,3 +324,52 @@
     padding-right: 4%;
   }
 }
+
+.block-cast-crew-slideshow {
+  display:inline;
+  padding:20px 0;
+  .views-row {
+    width:25%;
+    box-sizing: border-box;
+    padding: 0 1%;
+  }
+  .views-slideshow-controls-text-previous {
+    display: block;
+    position: absolute;
+    top: 31%;
+    left: -31px;
+    z-index: 100;
+    background: url("img/la.jpg") no-repeat center;
+    background-size: 24px;
+    width: 24px;
+    height: 100px;
+    text-indent: -9999px;
+  }
+  .views-slideshow-controls-text-pause {
+    display:none;
+  }
+  .views-slideshow-controls-text-next {
+    display: block;
+    position: absolute;
+    top:31%;
+    right: -31px;
+    z-index: 100;
+    text-indent: -9999px;
+    background: url("img/ra.jpg") no-repeat center;
+    background-size: 24px;
+    width: 24px;
+    height: 100px;
+  }
+  .views-slideshow-controls-text-previous:hover {
+    background: url("img/la-hover.jpg") no-repeat center;
+    background-size: 24px;
+    width:24px;
+    height: 100px;
+  }
+  .views-slideshow-controls-text-next:hover {
+    background: url("img/ra-hover.jpg") no-repeat center;
+    background-size: 24px;
+    width: 24px;
+    height: 100px;
+  }
+}
