--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -11,9 +11,6 @@ a {
   color:$orange;
 }
 
-.zone-content-wrapper {
-  padding:50px 0;
-}
 
 #zone-menu-wrapper {
   background-color:#000;
@@ -1356,4 +1353,8 @@ a.blue {
 
 .sticky-wrapper {
   height:0!important;
+}
+
+.zone-preface-wrapper {
+  padding-top:50px;
 }
