--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -291,4 +291,14 @@
     width: 24px;
     height: 100px; }
 
+.block-block-3, .block-block-4, .block-block-5, .block-block-6 {
+  width: 50%;
+  float: left; }
+
+.block-superfish-2 {
+  float: left;
+  padding-bottom: 10px;
+  width: 50%;
+  margin-top: 20px; }
+
 /*# sourceMappingURL=default-alpha-default-narrow.css.map */
