--- a/sites/all/themes/default/css/default-alpha-default-narrow.scss
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.scss
@@ -385,3 +385,14 @@
   width:50%;
   margin-top:20px;
 }
+
+#block-views-filmrecruitz-switch {
+  a {
+    width:50%;
+    float:left;
+  }
+  a.active {
+    width:100%;
+    float:left;
+  }
+}
