--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1128,4 +1128,7 @@ a.blue {
 .zone-preface-wrapper {
   padding-top: 50px; }
 
+.zone-content-wrapper {
+  padding-bottom: 50; }
+
 /*# sourceMappingURL=global.css.map */
