--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1129,6 +1129,6 @@ a.blue {
   padding-top: 50px; }
 
 .zone-content-wrapper {
-  padding-bottom: 50; }
+  padding-bottom: 50px; }
 
 /*# sourceMappingURL=global.css.map */
