--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1249,11 +1249,13 @@ input[type="submit"] {
   margin-bottom:20px;
   padding-bottom:20px;
   .group-left {
-    width:30%;
+    width:33%;
     float:left;
+    box-sizing:border-box;
+    padding-right:12px;
   }
   .group-right {
-    width:70%;
+    width:66%;
     float:left;
   }
 }
