--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1133,4 +1133,10 @@ a.blue {
 .zone-content-wrapper {
   padding-bottom: 50px; }
 
+h2 {
+  color: #f78b1f;
+  font-size: 46px;
+  margin-bottom: 0;
+  margin-top: 0; }
+
 /*# sourceMappingURL=global.css.map */
