--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1361,3 +1361,10 @@ a.blue {
   padding-bottom:50px;
 
 }
+
+h2 {
+  color: #f78b1f;
+  font-size: 46px;
+  margin-bottom: 0;
+  margin-top: 0;
+}
