--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1131,7 +1131,7 @@ a.blue {
   padding-top: 50px; }
 
 .zone-content-wrapper {
-  padding-bottom: 50px; }
+  padding: 50px 0; }
 
 h2 {
   color: #f78b1f;
