--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -836,9 +836,10 @@ input[type="submit"] {
 
 .page-filmrecruitz-cast, .page-filmrecruitz-crew {
   .block-webform {
-    width: 20%;
+    width: 15%;
     float: left;
-    margin-bottom: 15px;
+    margin-bottom: 27px;
+    margin-top:19px;
     .field-name-title {
       a {
         background-color: #f78b1f;
