--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1371,9 +1371,9 @@ h2 {
 }
 
 .view-id-filmfestival {
-  background-color:red;
   .views-row {
     width:33.3%;
     float:left;
+    text-align:center;
   }
 }
