--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1372,8 +1372,10 @@ h2 {
 
 .view-id-filmfestival {
   .views-row {
-    width:33.3%;
-    float:left;
-    text-align:center;
+    width: 33.3%;
+    float: left;
+    text-align: center;
+    box-sizing: border-box;
+    padding: 7px;
   }
 }
