--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1376,6 +1376,7 @@ h2 {
     float: left;
     text-align: center;
     box-sizing: border-box;
+    height:325px;
     padding: 7px;
     .views-field-title {
       font-size: 24px;
