--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -299,30 +299,30 @@ a {
   display: none; }
 
 /* Nieuws */
-.block-superfish-2 {
+.block-superfish-2, .block-superfish-3 {
   float: left;
   padding-bottom: 10px;
   width: 100%;
   margin-top: 20px; }
-  .block-superfish-2 h2.block-title {
+  .block-superfish-2 h2.block-title, .block-superfish-3 h2.block-title {
     float: left;
     font-size: 18px;
     padding-bottom: 0; }
-  .block-superfish-2 ul li {
+  .block-superfish-2 ul li, .block-superfish-3 ul li {
     margin: 0;
     margin-left: 0px; }
-    .block-superfish-2 ul li a {
+    .block-superfish-2 ul li a, .block-superfish-3 ul li a {
       font-size: 18px;
       padding: 0px 11px;
       font-weight: 700;
       color: #3989c9;
       text-transform: uppercase;
       border-right: 1px solid #3989c9; }
-    .block-superfish-2 ul li a.active {
+    .block-superfish-2 ul li a.active, .block-superfish-3 ul li a.active {
       color: #3989c9; }
-  .block-superfish-2 ul li.first a {
+  .block-superfish-2 ul li.first a, .block-superfish-3 ul li.first a {
     padding-left: 0; }
-  .block-superfish-2 ul li.last a {
+  .block-superfish-2 ul li.last a, .block-superfish-3 ul li.last a {
     border-right: none; }
 
 /* Home */
@@ -993,15 +993,15 @@ input[type="submit"] {
 .view-id-banner .views-row {
   margin-bottom: -10px; }
 
-.block-block-3, .block-block-4, .block-block-5, .block-block-6 {
+.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8 {
   width: 100%;
   float: left; }
-  .block-block-3 .orange h2, .block-block-4 .orange h2, .block-block-5 .orange h2, .block-block-6 .orange h2 {
+  .block-block-3 .orange h2, .block-block-4 .orange h2, .block-block-5 .orange h2, .block-block-6 .orange h2, .block-block-8 .orange h2 {
     color: #f78b1f;
     text-transform: uppercase;
     font-size: 50px;
     margin-bottom: 0; }
-  .block-block-3 .blue h2, .block-block-4 .blue h2, .block-block-5 .blue h2, .block-block-6 .blue h2 {
+  .block-block-3 .blue h2, .block-block-4 .blue h2, .block-block-5 .blue h2, .block-block-6 .blue h2, .block-block-8 .blue h2 {
     color: #3989c9;
     text-transform: uppercase;
     font-size: 50px;
@@ -1155,5 +1155,7 @@ h2 {
     color: #f78b1f;
     font-weight: 700;
     font-size: 18px; }
+  .view-id-filmfestival .views-row a {
+    color: #f78b1f !important; }
 
 /*# sourceMappingURL=global.css.map */
