--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -149,7 +149,7 @@ a {
 }
 
 /* Nieuws */
-  .block-superfish-2 {
+  .block-superfish-2, .block-superfish-3 {
     float:left;
     padding-bottom:10px;
     width:100%;
@@ -1147,7 +1147,7 @@ input[type="submit"] {
   }
 }
 
-.block-block-3, .block-block-4, .block-block-5, .block-block-6 {
+.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8 {
   width:100%;
   float:left;
   .orange {
