--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -295,7 +295,7 @@
   width: 50%;
   float: left; }
 
-.block-superfish-2 {
+.block-superfish-2, .block-superfish-3 {
   float: left;
   padding-bottom: 10px;
   width: 50%;
