--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -993,15 +993,15 @@ input[type="submit"] {
 .view-id-banner .views-row {
   margin-bottom: -10px; }
 
-.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8 {
+.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10 {
   width: 100%;
   float: left; }
-  .block-block-3 .orange h2, .block-block-4 .orange h2, .block-block-5 .orange h2, .block-block-6 .orange h2, .block-block-8 .orange h2 {
+  .block-block-3 .orange h2, .block-block-4 .orange h2, .block-block-5 .orange h2, .block-block-6 .orange h2, .block-block-8 .orange h2, .block-block-10 .orange h2 {
     color: #f78b1f;
     text-transform: uppercase;
     font-size: 50px;
     margin-bottom: 0; }
-  .block-block-3 .blue h2, .block-block-4 .blue h2, .block-block-5 .blue h2, .block-block-6 .blue h2, .block-block-8 .blue h2 {
+  .block-block-3 .blue h2, .block-block-4 .blue h2, .block-block-5 .blue h2, .block-block-6 .blue h2, .block-block-8 .blue h2, .block-block-10 .blue h2 {
     color: #3989c9;
     text-transform: uppercase;
     font-size: 50px;
