--- a/sites/all/themes/default/css/default-alpha-default-narrow.css
+++ b/sites/all/themes/default/css/default-alpha-default-narrow.css
@@ -291,7 +291,7 @@
     width: 24px;
     height: 100px; }
 
-.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8 {
+.block-block-3, .block-block-4, .block-block-5, .block-block-6, .block-block-8, .block-block-10 {
   width: 50%;
   float: left; }
 
