--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1163,7 +1163,7 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
   position: absolute;
   top: 100%;
   left: 0;
-  background: #3989c9;
+  background: #000;
   padding: 0;
   width: 100% !important;
   border-radius: 0; }
@@ -1183,7 +1183,8 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
       padding-left: 10px !important;
       color: #fff;
       text-transform: none;
-      font-weight: 300; }
+      font-weight: 300;
+      border-right: none; }
     ul#superfish-1 li.sf-item-2 ul li a:hover, ul#superfish-1 li.sf-item-3 ul li a:hover {
       background: none;
       margin: 0;
@@ -1200,5 +1201,8 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
       color: #fff;
       text-transform: none;
       font-weight: 300; }
+
+.sf-sub-indicator {
+  display: none; }
 
 /*# sourceMappingURL=global.css.map */
