--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1158,7 +1158,7 @@ h2 {
   .view-id-filmfestival .views-row a {
     color: #f78b1f !important; }
 
-ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
+ul#superfish-1 li ul {
   display: none;
   position: absolute;
   top: 100%;
@@ -1167,7 +1167,7 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
   padding: 0;
   width: 100% !important;
   border-radius: 0; }
-  ul#superfish-1 li.sf-item-2 ul li, ul#superfish-1 li.sf-item-3 ul li {
+  ul#superfish-1 li ul li {
     float: none;
     width: 200px;
     background: none;
@@ -1175,7 +1175,7 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
     color: #000;
     text-transform: uppercase;
     padding: 0 0 0 5px; }
-    ul#superfish-1 li.sf-item-2 ul li a, ul#superfish-1 li.sf-item-3 ul li a {
+    ul#superfish-1 li ul li a {
       background: none;
       margin: 0;
       margin-top: 17px;
@@ -1185,7 +1185,7 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
       text-transform: none;
       font-weight: 300;
       border-right: none; }
-    ul#superfish-1 li.sf-item-2 ul li a:hover, ul#superfish-1 li.sf-item-3 ul li a:hover {
+    ul#superfish-1 li ul li a:hover {
       background: none;
       margin: 0;
       margin-top: 17px;
@@ -1193,7 +1193,7 @@ ul#superfish-1 li.sf-item-2 ul, ul#superfish-1 li.sf-item-3 ul {
       color: #fff;
       text-transform: none;
       font-weight: 300; }
-    ul#superfish-1 li.sf-item-2 ul li a.active, ul#superfish-1 li.sf-item-3 ul li a.active {
+    ul#superfish-1 li ul li a.active {
       background: none;
       margin: 0;
       margin-top: 17px;
