--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1395,7 +1395,7 @@ h2 {
   }
 }
 
-ul#superfish-1 li.sf-item-2, ul#superfish-1 li.sf-item-3{
+ul#superfish-1 li {
   ul {
     display:none;
     position:absolute;
