--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1405,6 +1405,8 @@ ul#superfish-1 li {
     padding:0;
     width:100%!important;
     border-radius:0;
+    z-index:999;
+    padding-right:30px!important;
     li {
       float:none;
 
