--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -650,11 +650,11 @@ input[type="submit"] {
   #search-block-form input[type="submit"] {
     background: none;
     position: absolute;
-    top: 0;
+    top: -1px;
     color: #fff;
     text-transform: uppercase;
     font-weight: 100;
-    right: 0; }
+    right: -18px; }
   #search-block-form input[type="text"] {
     background-color: #f78b1f;
     width: 100%;
