--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -678,11 +678,11 @@ input[type="submit"] {
   input[type="submit"] {
     background: none;
     position: absolute;
-    top: 0;
+    top: -1px;
     color: #fff;
     text-transform: uppercase;
     font-weight: 100;
-    right:0;
+    right:-18px;
   }
   input[type="text"] {
     background-color:$orange;
