--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -678,7 +678,7 @@ input[type="submit"] {
   input[type="submit"] {
     background: none;
     position: absolute;
-    top: -1pxr;
+    top: -1px;
     color: #fff;
     text-transform: uppercase;
     font-weight: 100;
