--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -1207,4 +1207,7 @@ ul#superfish-1 li ul {
 .sf-sub-indicator {
   display: none; }
 
+.front .zone-preface-wrapper {
+  padding-bottom: 50px; }
+
 /*# sourceMappingURL=global.css.map */
