--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1452,3 +1452,9 @@ ul#superfish-1 li {
 .sf-sub-indicator {
   display:none;
 }
+
+.front {
+  .zone-preface-wrapper {
+    padding-bottom:50px;
+  }
+}
