--- a/sites/all/themes/default/css/global.scss
+++ b/sites/all/themes/default/css/global.scss
@@ -1028,28 +1028,30 @@ input[type="submit"] {
   float: left;
   z-index: 997;
   .views-row {
-    position:relative;
-    margin-bottom: 8px;
-    width: 50%;
-    padding: 12px;
-    background-color: rgba(0, 0, 0, 0.7);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
-    -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
-    a:after {
-      content: "";
-      background: url("img/arrow.jpg");
-      background-repeat: no-repeat;
-      background-size: 48px;
-      height: 51px;
-      width: 45px;
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    a {
-      color:#fff;
-      font-size:18px;
-      text-transform:uppercase;
+    .field-name-field-link-filmrecruitz {
+      position:relative;
+      margin-bottom: 8px;
+      width: 50%;
+      padding: 12px;
+      background-color: rgba(0, 0, 0, 0.7);
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000);
+      -ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#99000000, endColorstr=#99000000)";
+      a:after {
+        content: "";
+        background: url("img/arrow.jpg");
+        background-repeat: no-repeat;
+        background-size: 48px;
+        height: 51px;
+        width: 45px;
+        position: absolute;
+        right: 0;
+        top: 0;
+      }
+      a {
+        color:#fff;
+        font-size:18px;
+        text-transform:uppercase;
+      }
     }
   }
 }
