--- a/sites/all/themes/default/css/default-alpha-default-wide.css
+++ b/sites/all/themes/default/css/default-alpha-default-wide.css
@@ -10,7 +10,7 @@
   height: 51px;
   background-size: 51px; }
 
-.front .field-name-field-quotes, .context-filmrecruitzz .field-name-field-quotes {
+.field-name-field-quotes {
   position: absolute;
   width: 300px;
   font-size: 2.813em;
