--- a/sites/all/themes/default/css/global.css
+++ b/sites/all/themes/default/css/global.css
@@ -289,7 +289,7 @@ a {
     height: 100px; }
 
 /* Banner */
-.front .field-name-field-quotes {
+.field-name-field-quotes {
   display: none; }
 
 .block-news-frontpage-block {
